spec: Final changes on must-have GUI drafts
- Change Graph labels to German where needed
- Add fixes from proofreading the whole thing

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -598,7 +598,7 @@ Das \enquote{Datei}-Menü (1) hat die Einträge \enquote{Öffnen}, \enquote{Spei
 \captionof{figure}{Hauptfenster nach dem Öffnen des Beispielprogramms}
 \end{minipage}
 
-Nach dem Öffnen des Beispielprogramms wird deren Inhalt im Editor angezeigt (1).
+Nach dem Öffnen des Beispielprogramms wird dessen Inhalt im Editor angezeigt (1).
 Die Konsole gibt eine entsprechende Meldung aus (2).
 Das Eingabefeld bleibt weiterhin deaktiviert (3).
 
@@ -653,7 +653,7 @@ Gibt der Nutzer eine Abfrage (1) im Eingabefeld ein, versucht der Parser, diese 
 Treten dabei keine Fehler auf, wird eine Meldung in der Konsole angezeigt (2) und die Visualisierung der Abarbeitung dieser Abfrage gestartet (3).
 Eine Leiste mit Schaltflächen, die zur Steuerung der Visualisierung dienen, wird angezeigt.
 Die Schaltfäche \enquote{Nächster Schritt} (4) bewirkt die Ausführung und Visualisierung des nächsten Schrittes.
-Die Schaltfläche \enquote{Größer} und \enquote{Kleiner} (5) dienen zum Zoomen in der Visualisierung.
+Die Schaltflächen \enquote{Größer} und \enquote{Kleiner} (5) dienen zum Zoomen in der Visualisierung.
 
 \subsection{Lösung gefunden}
 
@@ -712,7 +712,7 @@ Diese schlägt fehl.
 Die Visualisierung stellt zu unifizierende Ziele als Runde Knoten dar.
 Unifikationen werden in  Rechtecken dargestellt, die in zwei weitere rechtecke aufgeteilt sind.
 Dabei enthält jede Unifikation im oberen Rechteck den Fakt, mit dem unifiziert werden soll.
-Fehlgeschlagene Unifikationen enthalten im unteren Rechteck den Satz \enquote{Unifikation fehlgeschlagen:} und den Grund des Fehlschlages.
+Fehlgeschlagene Unifikationen enthalten im unteren Rechteck den Satz \enquote{Unifikation fehlgeschlagen:} und den Grund des Fehlschlags.
 Außerdem sind sie rot eingefärbt.
 
 \subsubsection{Erfolgreiche Unifikation und Teilziele}
@@ -738,7 +738,7 @@ Dadurch werden im Baum die Fälle \enquote{Ziel wurde unifiziert mit} und \enquo
 
 \subsubsection{Erfolgreiche Unifikation mit rückwirkender Substitution}
 
-Im nächsten Schritt steigt der Interpreter in die Teilziele ab und versucht, von links nach rechts diese mit einem Fakt zu unifizieren.
+Im nächsten Schritt steigt der Interpreter in die Teilziele ab und versucht, von links nach rechts diese zu unifizieren.
 
 \begin{minipage}{\linewidth}
 \makebox[\linewidth]{
@@ -766,7 +766,7 @@ Der Interpreter muss also nach einer alternativen Definition von \texttt{parent}
 \captionof{figure}{Rücksprung nachdem ein Ziel nicht erfüllbar ist}
 \end{minipage}
 
-Ein Rücksprung wird durch eine aus Punkten bestehende, rot eingefärbte Karte dargestellt.
+Ein Rücksprung wird durch eine aus Punkten bestehende, rot eingefärbte Kante dargestellt.
 Das nicht erfüllbare Teilziel wird ebenfalls rot eingefärbt und mit dem Text \enquote{Nicht erfüllbar!} ergänzt.
 
 \section{Glossar}
