spec: Change Ergebnis to Lösung in introduction

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -65,7 +65,7 @@ a(b, c).
 
 Ist eine ebenso legitime Definition.
 
-Für eine Abfrage erhalten wir folgende Ergebnisse:
+Für eine Abfrage erhalten wir folgende Lösungen:
 
 \begin{lstlisting}
 ?- father(homer, bart).
