Add 'previous step' button GUI draft

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -681,6 +681,26 @@ Dieser Fall tritt ein, wenn der Interpreter einen Rückschritt vom eingegeben Zi
 In diesem Fall gibt es keine Fakten mehr, die mit dem Ziel unifizierbar sind.
 Unabhängig davon, ob es per se keine Lösungen gibt oder schon Lösungen gefunden wurden, wird die Meldung \enquote{Keine weiteren Lösungen.} angezeigt.
 
+\subsection{Schaltfläche \enquote{Vorheriger Schritt}}
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/gui/main_view_previous_step.png}
+}
+    \captionof{figure}{Die Schaltfläche \enquote{vorheriger Schritt}}
+\end{minipage}
+
+Die Schaltfläche \enquote{Vorheriger Schritt} (1) erlaubt es dem Nutzer, den Zustand vor dem aktuellen Schritt zu betrachten.
+Die Schaltfläche kann so lange betätigt werden, bis der Nutzer beim ersten Schritt angelangt ist.
+Ist der Nutzer beim ersten Schritt angelangt, wird die Schaltfläche deaktiviert.
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/gui/main_view_previous_step_disabled.png}
+}
+    \captionof{figure}{Interpreter beim ersten Schritt; die Schaltfläche \enquote{Vorheriger Schritt} ist deaktiviert}
+\end{minipage}
+
 \subsection{Visualisierung}
 
 Um die Beispiele besser darzustellen, wurden sie hier ohne die graphische Oberfläche des Programms eingefügt.
