spec: Fix misuse of the word 'rule'

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -787,7 +787,7 @@ Im nächsten Schritt steigt der Interpreter in die Teilziele ab und versucht, vo
 \captionof{figure}{Eine erfolgreiche Unifikation mit mit rückwirkender Substitution}
 \end{minipage}
 
-In diesem Beispiel ist der gefundene Fakt keine Regel, hat also keine Teilziele.
+In diesem Beispiel hat der gefundene Fakt keine Teilziele.
 Trotzdem müssen die Substitutionen in der restlichen Teilzielen angewendet werden.
 Die angewendeten Substitutionen werden dabei in den betreffenden Zielen hervorgehoben.
 
