spec: Fix typo and add code block

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -920,7 +920,7 @@ Diese schlägt fehl.
 \end{minipage}
 
 Die Visualisierung stellt zu unifizierende Ziele als Runde Knoten dar.
-Unifikationen werden in  Rechtecken dargestellt, die in zwei weitere rechtecke aufgeteilt sind.
+Unifikationen werden in  Rechtecken dargestellt, die in zwei weitere Rechtecke aufgeteilt sind.
 Dabei enthält jede Unifikation im oberen Rechteck den Fakt, mit dem unifiziert werden soll.
 Fehlgeschlagene Unifikationen enthalten im unteren Rechteck den Satz \enquote{Unifikation fehlgeschlagen:} und den Grund des Fehlschlags.
 Außerdem sind sie rot eingefärbt.
@@ -1008,7 +1008,7 @@ Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen b
 Sammelbegriff für Identifier, welche für sich allein stehen oder eine Liste an Termen auswerten.
 
 \textbf{Ziel}:
-Sammelbegriff für Funktoren, Vergleiche von Termen über den \enquote{=}-Operator, Arithmetik oder den \enquote{Cut}-Operator.
+Sammelbegriff für Funktoren, Vergleiche von Termen über den \enquote{\texttt{=}}-Operator, Arithmetik oder den \enquote{Cut}-Operator (\texttt{!}).
 
 \textbf{Term}:
 Sammelbegriff für Funktoren, Variablen oder Zahlen.
