spec: Replace 'Prädikat' with 'Regel' for consistency

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -364,7 +364,7 @@ Die aktuell angezeigte Visualisierung lässt sich als Bild im PNG- oder SVG-Form
 \functionality{Deaktivierung der Standardbibliothek}{fnc:disablelib}
 \fulfills{crt:disablelib}
 
-Die automatisch eingebundene Standardbibliothek kann über eine Schaltfläche deaktiviert werden. Von der Standardbibliothek zur Verfügung gestellte Prädikate werden nun nicht mehr berücksichtigt.
+Die automatisch eingebundene Standardbibliothek kann über eine Schaltfläche deaktiviert werden. Von der Standardbibliothek zur Verfügung gestellte Regeln werden nun nicht mehr berücksichtigt.
 
 %TODO: Richtlinien als Liste?
 \functionality{Formatierung des Quellcodes}{fnc:formatter}
@@ -1014,7 +1014,7 @@ Sammelbegriff für Funktoren, Vergleiche von Termen über den \enquote{\texttt{=
 Sammelbegriff für Funktoren, Variablen oder Zahlen.
 
 \textbf{Standardbibliothek}:
-Voreingestellte Prädikate, welche automatisch bei der Verarbeitung durch den Parser angefügt werden können.
+Voreingestellte Regeln, welche automatisch bei der Verarbeitung durch den Parser angefügt werden können.
 
 \textbf{Abfrage}:
 Ziel, welches ausgewertet werden soll. Das Ergebnis der Auswertung kann eine Menge an Lösungen oder eine Ja-Nein-Antwort sein.
